@@ -1,0 +1,15 @@
+package NFS::Watchdog::Utils;
+
+#
+#  Author: Otavio Fernandes <otaviof@gmail.com>
+# Created: 04/03/2010 09:29:18
+#
+
+use strict;
+use warnings;
+
+use Moose;
+
+1;
+
+__END__
